# vidhi-lang

./: .gitignore  README.md  pyproject.toml  requirements.txt
conflicts/: conflict_types.yaml
examples/app/backend/: app.py
examples/app/frontend/: index.html  package-lock.json  package.json
examples/app/frontend/src/: App.jsx
examples/ropa/: insurance_ropa_output.json
manifests/: insurance_health_sample.yaml  insurance_kyc_sample.yaml
obligations/: dpdp.yaml  irdai.yaml  rbi.yaml
src/vidhi_lang/: cli.py  generator.py  models.py
taxonomies/: data_categories.yaml  legal_bases.yaml  processing_activities.yaml
